@@ -5,7 +5,6 @@ import bio.terra.cda.app.util.SqlUtil;
 import bio.terra.cda.app.util.TableSchema;
 import bio.terra.cda.generated.model.Query;
 import com.google.cloud.Tuple;
-
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
@@ -33,24 +32,25 @@ public class SqlGenerator {
 
     QueryGenerator queryGenerator = this.getClass().getAnnotation(QueryGenerator.class);
     this.modularEntity = queryGenerator != null;
-    this.entitySchema = queryGenerator != null
+    this.entitySchema =
+        queryGenerator != null
             ? TableSchema.getDefinitionByName(tableSchema, queryGenerator.Entity())
             : null;
 
-    this.filteredFields = queryGenerator != null
-            ? Arrays.asList(queryGenerator.ExcludedFields())
-            : List.of();
+    this.filteredFields =
+        queryGenerator != null ? Arrays.asList(queryGenerator.ExcludedFields()) : List.of();
   }
 
   public String generate() throws IllegalArgumentException {
     return sql(qualifiedTable, rootQuery, false);
   }
 
-  protected String sql(String tableOrSubClause, Query query, Boolean subQuery) throws IllegalArgumentException {
+  protected String sql(String tableOrSubClause, Query query, Boolean subQuery)
+      throws IllegalArgumentException {
     var resultsQuery = resultsQuery(query, tableOrSubClause, subQuery);
     var resultsAlias = "results";
-    return String.format("SELECT %1$s.* EXCEPT(rn) FROM (%2$s) as %1$s WHERE rn = 1",
-            resultsAlias, resultsQuery);
+    return String.format(
+        "SELECT %1$s.* EXCEPT(rn) FROM (%2$s) as %1$s WHERE rn = 1", resultsAlias, resultsQuery);
   }
 
   protected String resultsQuery(Query query, String tableOrSubClause, Boolean subQuery) {
@@ -59,36 +59,33 @@ public class SqlGenerator {
       // SQL version of
       // the right subtree, instead of using table. The left subtree is now the top
       // level query.
-      return resultsQuery(query.getL(), String.format("(%s)", sql(tableOrSubClause, query.getR(), true)), subQuery);
+      return resultsQuery(
+          query.getL(), String.format("(%s)", sql(tableOrSubClause, query.getR(), true)), subQuery);
     }
 
-    String[] parts = entitySchema != null
-            ? entitySchema.x().split("\\.")
-            : new String[0];
-    String prefix = entitySchema != null
-            ? SqlUtil.getAlias(parts.length - 1, parts)
-            : table;
+    String[] parts = entitySchema != null ? entitySchema.x().split("\\.") : new String[0];
+    String prefix = entitySchema != null ? SqlUtil.getAlias(parts.length - 1, parts) : table;
 
-    Stream<String> entityUnnests = entitySchema != null
-            ? SqlUtil.getUnnestsFromParts(table, parts, true)
-            : Stream.empty();
+    Stream<String> entityUnnests =
+        entitySchema != null ? SqlUtil.getUnnestsFromParts(table, parts, true) : Stream.empty();
 
     var fromClause =
-            Stream.concat(
-                    Stream.concat(Stream.of(baseFromClause(tableOrSubClause)),
-                                  ((BasicOperator) query).getUnnestColumns(table, tableSchemaMap, true)),
-                    entityUnnests)
-                    .distinct()
-                    .collect(Collectors.joining(" "));
+        Stream.concat(
+                Stream.concat(
+                    Stream.of(baseFromClause(tableOrSubClause)),
+                    ((BasicOperator) query).getUnnestColumns(table, tableSchemaMap, true)),
+                entityUnnests)
+            .distinct()
+            .collect(Collectors.joining(" "));
 
     String condition = ((BasicOperator) query).queryString(table, tableSchemaMap);
 
-    return String.format("SELECT ROW_NUMBER() OVER (PARTITION BY %1$s) as rn, %2$s FROM %3$s WHERE %4$s",
-            getPartitionByFields(query, prefix),
-            subQuery
-                    ? String.format("%s.*", table)
-                    : getSelect(query, table, !this.modularEntity),
-            fromClause, condition);
+    return String.format(
+        "SELECT ROW_NUMBER() OVER (PARTITION BY %1$s) as rn, %2$s FROM %3$s WHERE %4$s",
+        getPartitionByFields(query, prefix),
+        subQuery ? String.format("%s.*", table) : getSelect(query, table, !this.modularEntity),
+        fromClause,
+        condition);
   }
 
   protected String baseFromClause(String tableOrSubClause) {
@@ -97,24 +94,32 @@ public class SqlGenerator {
 
   protected String getPartitionByFields(Query query, String alias) {
     if (query.getNodeType() == Query.NodeTypeEnum.SELECT) {
-      return Stream.concat(Stream.of(String.format("%s.id", alias)),
-              Arrays.stream(query.getL().getValue().split(",")).map(String::trim)
-              .filter(select -> this.tableSchemaMap.get(select).getMode().equals("REPEATED")
-                || select.contains("."))
-              .map(
-                  select -> {
-                    var parts =
-                            Arrays.stream(select.split("\\.")).map(String::trim).toArray(String[]::new);
+      return Stream.concat(
+              Stream.of(String.format("%s.id", alias)),
+              Arrays.stream(query.getL().getValue().split(","))
+                  .map(String::trim)
+                  .filter(
+                      select ->
+                          this.tableSchemaMap.get(select).getMode().equals("REPEATED")
+                              || select.contains("."))
+                  .map(
+                      select -> {
+                        var parts =
+                            Arrays.stream(select.split("\\."))
+                                .map(String::trim)
+                                .toArray(String[]::new);
 
-                    if (this.tableSchemaMap.get(select).getMode().equals("REPEATED")) {
-                      return SqlUtil.getAlias(parts.length -1, parts);
-                    } else if (Arrays.asList(parts).contains("identifier")) {
-                      return String.format("%s.system", SqlUtil.getAlias(parts.length - 2, parts));
-                    } else {
-                      return String.format("%s.id", SqlUtil.getAlias(parts.length - 2, parts));
-                    }
-                  }
-              )).distinct().collect(Collectors.joining(", "));
+                        if (this.tableSchemaMap.get(select).getMode().equals("REPEATED")) {
+                          return SqlUtil.getAlias(parts.length - 1, parts);
+                        } else if (Arrays.asList(parts).contains("identifier")) {
+                          return String.format(
+                              "%s.system", SqlUtil.getAlias(parts.length - 2, parts));
+                        } else {
+                          return String.format("%s.id", SqlUtil.getAlias(parts.length - 2, parts));
+                        }
+                      }))
+          .distinct()
+          .collect(Collectors.joining(", "));
     } else {
       return String.format("%s.id", alias);
     }
@@ -129,7 +134,8 @@ public class SqlGenerator {
   }
 
   protected Stream<String> queryToSelect(Query query) {
-    return Arrays.stream(query.getL().getValue().split(",")).map(String::trim)
+    return Arrays.stream(query.getL().getValue().split(","))
+        .map(String::trim)
         .map(
             select -> {
               var mode = tableSchemaMap.get(select).getMode();
@@ -143,21 +149,17 @@ public class SqlGenerator {
                           ? String.format("%s.", table)
                           : SqlUtil.getAlias(parts.length - 2, parts),
                   mode.equals("REPEATED")
-                      ? SqlUtil.getAlias(parts.length -1, parts)
+                      ? SqlUtil.getAlias(parts.length - 1, parts)
                       : parts[parts.length - 1],
-                  this.modularEntity
-                      ? parts[parts.length - 1]
-                      : String.join("_", parts));
+                  this.modularEntity ? parts[parts.length - 1] : String.join("_", parts));
             });
   }
 
   protected List<String> getSelectsFromEntity(String prefix, Boolean skipExcludes) {
-    return (entitySchema != null
-            ? Arrays.asList(entitySchema.y().getFields())
-            : tableSchema).stream()
+    return (entitySchema != null ? Arrays.asList(entitySchema.y().getFields()) : tableSchema)
+        .stream()
             .filter(definition -> skipExcludes || !filteredFields.contains(definition.getName()))
-            .map(definition -> String.format("%1$s.%2$s AS %2$s",
-                    prefix, definition.getName()))
+            .map(definition -> String.format("%1$s.%2$s AS %2$s", prefix, definition.getName()))
             .collect(Collectors.toList());
   }
 }
